--- a/unicorn-sparkle/src/components/Footer.astro
+++ b/unicorn-sparkle/src/components/Footer.astro
@@ -1,13 +1,4 @@
 ---
-import { t } from 'i18n:astro'
-
-const { designed, developed } = t('footer', {
-  returnObjects: true
-})
-
-const { designed_with: designedWith, designed_by: designedBy } = designed
-const { developed_with: developedWith, developed_by: developedBy } = developed
-
 const year = new Date().getFullYear()
 ---
 
@@ -33,7 +24,7 @@ const year = new Date().getFullYear()
       margin-inline: 4px;
     }
 
-    & P > span:first-child::after {
+    & p > span:first-child::after {
       content: '|';
       display: inline-block;
       translate: 0 -1px;
