--- a/unicorn-sparkle/src/pages/_home/Projects.astro
+++ b/unicorn-sparkle/src/pages/_home/Projects.astro
@@ -19,8 +19,8 @@ const { title, projects } = t('projects', {
         title={title}
         description={description}
         techs={techs}
-        code={code}
-        preview={preview}
+        code={{ text: "Código", url: code }}
+        preview={{ text: "Vista Previa", url: preview }}
       />
     ))
   }
